<resources>
    <string name="app_name">Слово дня</string>
    <string name="date_format">dd.MM.yyyy</string>
    <string name="short_date_format">d MMMM</string>
    <string name="locale">ru</string>
    <string name="google">найти в google</string>
    <string name="random_word">случайное слово</string>
    <string name="share_word">поделиться словом</string>
    <string name="search_word">найти слово</string>
    <string name="all_word_menu">все слова</string>
    <string name="favourite">избранное</string>
    <string name="word_offers">предложить слово по e-mail</string>
    <string name="new_tomorrow_word"><![CDATA[<p>новое слово будет ждать вас здесь завтра</p>]]></string>
</resources>
