<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:title="@string/random_word"
        android:id="@+id/menu_el_random"
        android:icon="@mipmap/ic_menu_random"
        app:showAsAction="always"/>

    <item
        android:title="@string/share_word"
        android:id="@+id/menu_el_share"
        app:showAsAction="always"
        android:icon="@mipmap/ic_menu_share"/>

    <item
        android:title="@string/search_word"
        android:id="@+id/menu_el_search"
        android:icon="@mipmap/ic_menu_search"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:title="@string/all_word_menu"
        android:id="@+id/menu_el_all_words"
        app:showAsAction="never"/>

    <item
        android:title="@string/favourite"
        android:id="@+id/menu_el_fav_words"
        app:showAsAction="never"/>

    <item
        android:title="@string/word_offers"
        android:id="@+id/menu_el_word_offer"
        app:showAsAction="never"/>

</menu>